# alluvial-ed

./: CNAME  Cargo.toml  LICENSE  README.md  index.html  sw.js
assets/: manifest.json
assets/css/: categories.css  player.css  site.css
assets/img/: food.psd
assets/js/: morph.min.js  player.js
categories/: colors.html  countries.html  feelingLevels.html  feelings.html  firstSixMonths.html  food1.html  food2.html  lastSixMonths.html  months.html  numbers11to20.html  numbers1to10.html  places1.html  places2.html  questionWords.html  schoolEvents.html  seasons.html  shapes.html  sports.html  subjects.html
db/: db.json
src/: main.rs
templates/: categories.html  layout.html  player.html
