[package]
name = "htmx_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["serde-json"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.105"
